# KPI7_PC_CW

./: .gitignore  CMakeLists.txt  README.md
doc/protocol/: template.typ  ПП_курс_ЗарицькийК.А._ДА-01.typ
doc/protocol/tabl/: index_build.csv  index_build2.csv
eval_data/: eval  eval.cpp
exec/: CWClient.cpp  CWMultiClient.cpp  CWServer.cpp  main.cpp
include/: iinverted_index.h  inverted_index.h  invertedindex.h  thread_pool.h  threadpool.h
src/: inverted_index.cpp  invertedindex.cpp  thread_pool.cpp  threadpool.cpp
test_data/dir1/dir3/: f4
test_data/dir2/: f5
tests/: CMakeLists.txt  inverted_index_write_test_multithread.cpp  inverted_index_write_test_single.cpp  invertedindex_write_multithread_test.cpp  invertedindex_write_singlethread_test.cpp  test.cpp  thread_pool_completion_test.cpp  thread_pool_subscriber_test.cpp  thread_pool_thread_count_test.cpp  threadpool_completion_test.cpp  threadpool_subscriber_test.cpp  threadpool_thread_count_test.cpp
